stacks/network/nacl/network_acl.tf
resource "aws_network_acl" "tfer--acl-0c9a59cbe41434399" {
  egress {
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = "0"
    icmp_code  = "0"
    icmp_type  = "0"
    protocol   = "-1"
    rule_no    = "100"
    to_port    = "0"
  }

  ingress {
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = "0"
    icmp_code  = "0"
    icmp_type  = "0"
    protocol   = "-1"
    rule_no    = "100"
    to_port    = "0"
  }

  subnet_ids = [var.pub_sub_1_id, var.pub_sub_2_id, var.priv_sub_1_id, var.priv_sub_2_id]
  vpc_id     = var.vpc_id
}
